--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -211,8 +211,21 @@
     }
    ],
    "source": [
-    "plt.subplot(121), plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB)), plt.title('Original Image')\n",
-    "plt.subplot(122), plt.imshow(edges, cmap='gray'), plt.title('Edges Detected')\n",
+    "# Create a larger figure\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "\n",
+    "# Plot the original image\n",
+    "axes[0].imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "axes[0].set_title('Original Image')\n",
+    "\n",
+    "# Plot the edges\n",
+    "axes[1].imshow(edges, cmap='gray')\n",
+    "axes[1].set_title('Edges Detected')\n",
+    "\n",
+    "# Adjust layout\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -271,13 +284,29 @@
     }
    ],
    "source": [
+    "# Create a larger figure\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "\n",
+    "# Plot the original image\n",
+    "axes[0].imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "axes[0].set_title('Original Image')\n",
+    "\n",
+    "# Create a copy of the image for drawing lines\n",
     "line_image = np.copy(image)\n",
+    "\n",
+    "# Draw lines on the copy\n",
     "for line in lines:\n",
     "    x1, y1, x2, y2 = line[0]\n",
     "    cv2.line(line_image, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
     "\n",
-    "plt.subplot(121), plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB)), plt.title('Original Image')\n",
-    "plt.subplot(122), plt.imshow(cv2.cvtColor(line_image, cv2.COLOR_BGR2RGB)), plt.title('Lines Detected')\n",
+    "# Plot the image with lines\n",
+    "axes[1].imshow(cv2.cvtColor(line_image, cv2.COLOR_BGR2RGB))\n",
+    "axes[1].set_title('Lines Detected')\n",
+    "\n",
+    "# Adjust layout\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -294,10 +323,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_intersections(lines, image_shape):\n",
+    "def find_intersections(lines, image_shape, border_threshold=10):\n",
     "    intersections = []\n",
+    "\n",
     "    for i in range(len(lines)):\n",
-    "        for j in range(i+1, len(lines)):\n",
+    "        for j in range(i + 1, len(lines)):\n",
     "            x1, y1, x2, y2 = lines[i][0]\n",
     "            x3, y3, x4, y4 = lines[j][0]\n",
     "\n",
@@ -306,15 +336,18 @@
     "            if np.abs(np.arctan2(y2 - y1, x2 - x1) - np.arctan2(y4 - y3, x4 - x3)) > angle_threshold:\n",
     "                # Calculate intersection point\n",
     "                det = (x1 - x2) * (y3 - y4) - (y1 - y2) * (x3 - x4)\n",
-    "                if det != 0:  # Check if lines are not parallel\n",
+    "                if det != 0:\n",
     "                    intersection_x = ((x1 * y2 - y1 * x2) * (x3 - x4) - (x1 - x2) * (x3 * y4 - y3 * x4)) / det\n",
     "                    intersection_y = ((x1 * y2 - y1 * x2) * (y3 - y4) - (y1 - y2) * (x3 * y4 - y3 * x4)) / det\n",
-    "                    \n",
+    "\n",
     "                    # Check if the intersection point is within the image bounds\n",
-    "                    if 0 <= intersection_x < image_shape[1] and 0 <= intersection_y < image_shape[0]:\n",
+    "                    if (\n",
+    "                        border_threshold <= intersection_x < image_shape[1] - border_threshold and\n",
+    "                        border_threshold <= intersection_y < image_shape[0] - border_threshold\n",
+    "                    ):\n",
     "                        intersections.append((int(intersection_x), int(intersection_y)))\n",
     "\n",
-    "    return intersections\n"
+    "    return intersections"
    ]
   },
   {
