--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,7 @@
     }
    ],
    "source": [
+    "# image = cv2.imread('../img/src_hiro-diagonal.png')\n",
     "image = cv2.imread('../img/src_hiro-diagonal.png')\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
        "('Number of edges detected:', 500)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
        "('Number of lines found:', 14)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +343,7 @@
        "('Number of intersections found:', 4)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -417,6 +418,10 @@
     }
    ],
    "source": [
+    "# Check if all 4 corners were detected\n",
+    "if len(intersections) != 4:\n",
+    "    raise Exception(f\"{len(intersections)} points detected, need 4.\")\n",
+    "\n",
     "# Matching points from source (marker) and destination (the source image)\n",
     "h, w = reference_image.shape\n",
     "REFERENCE_CORNERS = [[0, 0], [w-1, 0], [0, h-1], [w-1, h-1]]\n",
@@ -456,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
