--- a/ar_app/marker/marker_pipeline.ipynb
+++ b/ar_app/marker/marker_pipeline.ipynb
@@ -32,7 +32,7 @@
     "import math\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "from objloader_simple import *"
+    "from ..objloader_simple import *"
    ]
   },
   {
