--- a/marker_detection.ipynb
+++ b/marker_detection.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature-based Augmented Reality App"
+    "# Marker-based Augmented Reality App"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A feature-based augmented reality app made with Python and OpenCV. Uses feature matching to calculate camera pose, homography, and render the 3D object."
+    "A marker-based augmented reality app made with Python and OpenCV."
    ]
   },
   {
@@ -32,7 +32,7 @@
     "import math\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "from ..objloader_simple import *"
+    "from ar_app.objloader_simple import *"
    ]
   },
   {
