--- a/feature_detection.ipynb
+++ b/feature_detection.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Marker-based Augmented Reality App"
+    "# Feature-based Augmented Reality App"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A marker-based augmented reality app made with Python and OpenCV."
+    "A feature-based augmented reality app made with Python and OpenCV. Uses feature matching to calculate camera pose, homography, and render the 3D object."
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "import math\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "from ..objloader_simple import *"
+    "from ar_app.objloader_simple import *"
    ]
   },
   {
